--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,32 @@
-.App {
-  text-align: center;
+header {
+  /* overflow: hidden; */
+  background: transparent;
+  position: sticky;
+  top: 0;
+  z-index: 999;
+  height: 55px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+nav {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  justify-content: flex-end;
+  height: 100%;
+  padding: 1 2rem;
 }
 
-.App-link {
-  color: #61dafb;
+.header-container-item {
+  background-color: transparent;
+  font-weight: 510;
+  color: dark white;
+  border: 0px;
+  text-decoration: none;
+  padding: 25px;
+  font-size: 30px;
+  line-height: 1px;
+  transition: all 0.3s ease;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.header-container-item:hover {
+  color: #30b5dd;
+  font-size: 35px;
 }
