--- a/src/App.css
+++ b/src/App.css
@@ -30,3 +30,10 @@ nav {
   color: #30b5dd;
   font-size: 35px;
 }
+
+@media (prefers-color-scheme: dark) {
+   body {
+    background-color: #a83030;
+    color: #fff;
+   }
+}
